# AlphaAgent

./: .env.example  .gitignore  ACCEPTANCE_CRITERIA.md  AGENTS.md  ARCHITECTURE.md  CLAUDE_CODE_GUIDE.md  CLAUDE_CODE_START_PROMPT.md  CODEX_REVIEW_GUIDE.md  DATA_PLAN.md  HERMES_INTEGRATION_PLAN.md  IMPLEMENTATION_SEQUENCE.md  Makefile  README.md  REPO_STRUCTURE.md  ROADMAP.md  TASKS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alpha_harness/: __init__.py  config.py  multiple_testing.py  regimes.py  sdk.py  service.py
alpha_harness/artifacts/: __init__.py  promoted.py  store.py  trail_registry.py
alpha_harness/audit/: __init__.py  __main__.py  imports.py
alpha_harness/combination/: __init__.py  combiner.py  recipe.py
alpha_harness/data/: __init__.py  bigquery_loader.py  ccxt_crypto.py  crypto_loader.py  equities_loader.py  event_truth.py  fingerprint.py  fundamentals_loader.py  loader_factory.py  models.py  parquet_store.py  polygon_equities.py  rate_limit.py  synthetic.py  tick_materialization.py
alpha_harness/db/: __init__.py  connection.py
alpha_harness/director/: __init__.py  research_director.py  research_policy.py
alpha_harness/evaluators/: __init__.py  neutralize.py  novelty.py  persistence.py  portfolio.py  promotion_judge.py  signal_quality.py  walk_forward.py
alpha_harness/factors/: __init__.py  canonical.py  compiler.py  (+4 more)
configs/: default.toml
docs/: AUDIT_LOOK_AHEAD.md  BACKENDS.md  BLOOMBERG_DATASET_BUILD.md  CASE_STUDY_2026Q2.md  CASE_STUDY_HK_IPO_MICRO.md  CASE_STUDY_HONEST.md  CASE_STUDY_HONEST_V2.md  CASE_STUDY_HONEST_V3.md  CASE_STUDY_ROBUSTNESS_SP50.md  DATA_INFRA_PLAN.md  DESIGN_LOCKUP_EVENT_STUDY.md  HK_IPO_EVENT_DATA_CURATED.md  LOCAL_TESTING.md  PREREGISTRATION_FREEFLOAT_LOCKUP_2026Q3.md  PREREGISTRATION_HK128_2026Q3.md  PRODUCTIZATION_P0_PLAN.md  PRODUCTIZATION_P1_PLAN.md  PROJECT_STATUS.md  RESEARCH_DIRECTOR.md  ROUND3_SUMMARY.md  ROUND4_TO_6_SUMMARY.md  ROUND7_TO_9_SUMMARY.md
scripts/: audit_hk_ipo_event_truth.py  autonomous_cycle.py  autonomous_researcher.py  backfill_parquet.py  bootstrap_db.py  combine_factors.py  doctor.py  doctor_hk_ipo_data.py  doctor_hk_ipo_events.py  inspect_composite.py  list_cycles.py  list_factors.py  list_trails.py  materialize_hk_ipo_raw_tick.py  plan_hk_ipo_raw_tick_materialization.py  refine_factor.py  research_director.py  robustness_study.py  run_research_cycle.py  sample_ingest.py  validate_strict.py
(+154 files in other folders)
