[project]
name = "alpha-agent"
version = "0.1.0"
description = "Quant-native alpha research harness built on Hermes runtime substrate"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }

dependencies = [
    # -- Core domain modelling --
    "pydantic>=2.0,<3",           # typed schemas for all domain objects

    # -- Database layer --
    "sqlalchemy>=2.0,<3",         # registry persistence (Core, not ORM)
    "psycopg[binary]>=3.1,<4",    # modern async-ready Postgres driver

    # -- Research data stack --
    "numpy>=1.24,<3",             # numerical operations in DSL executor and evaluator
    "pandas>=2.0,<3",             # dataframes for factor computation and evaluation
    "pyarrow>=14,<19",            # Parquet read/write for market data storage

    # -- Data ingestion --
    "httpx>=0.27,<1",             # async HTTP client for market data APIs
    "ccxt>=4.0,<5",               # unified crypto exchange connectivity
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9",
    "ruff>=0.4,<1",
    "mypy>=1.7,<2",
    "pandas-stubs>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alpha_harness"]

# ── Ruff ─────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear — catches common pitfalls
    "SIM", # flake8-simplify — unnecessary complexity
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["alpha_harness"]

# ── Pytest ───────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires external services (Postgres, etc.)",
    "e2e: full end-to-end research cycle tests",
]

# ── Mypy ─────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

# Third-party libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "ccxt.*",
]
ignore_missing_imports = true
